# game-of-ur

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  annotated.html  annotated_dup.js  app_2game__of__ur__data_2model_8hpp.html  app_2game__of__ur__data_2model_8hpp.js  app_2game__of__ur__data_2model_8hpp_source.html  board_8hpp.html  board_8hpp_source.html  board__locations_8hpp.html  board__locations_8hpp.js  board__locations_8hpp_source.html  camera__system_8hpp.html  camera__system_8hpp_source.html  classBoard-members.html  classBoard.html  classBoard.js  classBoardLocations-members.html  classBoardLocations.html  classBoardLocations.js  classDice-members.html  classDice.html  classDice.js  classGameOfUrModel-members.html  classGameOfUrModel.html  classGameOfUrModel.js  classHouse-members.html  classHouse.html  classHouse.js  classIHoverable-members.html  classIHoverable.html  classIHoverable.js  classILeftClickable-members.html  classILeftClickable.html  classILeftClickable.js  classIUsePointer-members.html  (+684 more)
.github/workflows/: documentation.yaml
d0/d14/: classIHoverable-members.html
d0/d27/: structTutorialContent-members.html
d0/d2b/: classToyMakersEngine_1_1SimSystem-members.html
d0/d30/: structToyMakersEngine_1_1LightRenderUnit-members.html
d0/d3f/: util_8hpp_source.html
d0/d44/: structstd_1_1hash_3_01ToyMakersEngine_1_1InputSourceDescription_01_4-members.html
d0/d4c/: structToyMakersEngine_1_1Volume.html
d0/d53/: classUrRecords-members.html
d0/d6d/: classToyMakersEngine_1_1FixedActionBinding-members.html
d0/d78/: structPieceType.html
d0/d7b/: classRenderDebugViewer-members.html  sim__system_8hpp_source.html
d0/d8b/: structToyMakersEngine_1_1BuiltinVertexData-members.html
d0/d8d/: text__render_8hpp_source.html
d0/dab/: classToyMakersEngine_1_1BaseSimObjectAspect.html
d0/dad/: classToyMakersEngine_1_1SimObjectAspect.html
d0/db0/: piece__type__id_8hpp_source.html
d0/db4/: classUrSceneView-members.html
d0/dc1/: structToyMakersEngine_1_1SceneNodeCore_1_1getByPath__Helper_3_01BaseSimObjectAspect_01_6_01_4.html
d0/dc8/: classToyMakersEngine_1_1Interpolator.html  classToyMakersEngine_1_1Interpolator.js
d0/ddb/: ecs__world_8hpp_source.html
d0/de4/: classToyMakersEngine_1_1ViewportNodeFromDescription.html
d0/df0/: render__debug__viewer_8hpp_source.html
d0/df8/: classToyMakersEngine_1_1ResizeRenderStage-members.html
d1/d06/: structPieceIdentity.html
d1/d0a/: spatial__query__basic__types_8hpp_source.html
d1/d26/: classToyMakersEngine_1_1StaticModelRectangleDimensions.html
d1/d2b/: shader__program_8hpp_source.html
d1/d2d/: vertex_8hpp_source.html
d1/d31/: serialize_8hpp_source.html
d1/d32/: classToyMakersEngine_1_1StaticMeshSphereLatLong-members.html
d1/d42/: classUrUINavigation-members.html
d1/d49/: classToyMakersEngine_1_1MaterialFromDescription-members.html
d1/d4f/: classIUsePointer-members.html
d1/d80/: classToyMakersEngine_1_1IResourceFactory.html
d1/d82/: ui__text_8hpp_source.html
d1/d9b/: classToyMakersEngine_1_1ShaderProgram.html
d1/d9e/: structToyMakersEngine_1_1CameraProperties-members.html
d1/d9f/: structMoveResultData.html
d1/da3/: classToyMakersEngine_1_1ActionContext.html
d1/da9/: classToyMakersEngine_1_1RenderSystem_1_1LightQueue.html
d1/dac/: classToyMakersEngine_1_1TextFont-members.html
d1/db5/: classToyMakersEngine_1_1SceneFromDescription.html
d1/db8/: classUrUITutorialsBrowser.html
d1/dba/: classToyMakersEngine_1_1LightInstanceAllocator-members.html
d1/dd1/: classToyMakersEngine_1_1SceneFromFile.html
d1/de0/: texture_8hpp_source.html
d1/dec/: classToyMakersEngine_1_1SpatialQuerySystem_1_1StaticModelBoundsComputeSystem-members.html
d1/df8/: structToyMakersEngine_1_1Plane.html
d2/d04/: classToyMakersEngine_1_1RenderSystem_1_1LightQueue-members.html
d2/d12/: classToyMakersEngine_1_1SystemManager.html
data/: bad_reflection_ball.json  board_piece_ring.json  dumb_ui.json  dumb_ui_text.json  input_bindings.json  project.json  test_scene_1.json  test_scene_2.json  test_subscene_2_3d.json  ur_3d.json  ur_button.json  ur_credits.json  ur_main_menu.json  ur_prototype.json  ur_prototype_cpu_vs.json  ur_prototype_local_vs.json  ur_records.json  ur_records_browser.json  ur_root.json  ur_tutorials.json  ur_tutorials_browser.json  ur_ui.json  ur_ui_launch_piece.json  ur_ui_player_panel.json
docs/: game_design_doc.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+78 more)
src/: light.cpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader_program.cpp  shader_program.hpp  shapegen.cpp  shapegen.hpp  texture.cpp  texture.hpp  vertex.hpp  window_context_manager.cpp  window_context_manager.hpp
src/engine/: CMakeLists.txt  application.cpp  application.hpp  application.hpp.in  apploop_events.cpp  apploop_events.hpp  camera_system.cpp  camera_system.hpp  ecs_world.cpp  ecs_world.hpp  ecs_world_resource_ext.hpp  fly_camera.cpp  fly_camera.hpp  framebuffer.cpp  framebuffer.hpp  framebuffer_manager.hpp  input_system.hpp  input_system_action_context.cpp  input_system_data.hpp  input_system_input_manager.cpp  instance.cpp  instance.hpp  light.cpp  light.hpp  light_manager.hpp  material.cpp  material.hpp  material_manager.hpp  mesh.cpp  mesh.hpp  mesh_manager.hpp  model.cpp  model.hpp  model_manager.hpp  placement.hpp  registrator.hpp  render_pass.hpp  render_stage.cpp  render_stage.hpp  render_system.cpp  (+42 more)
src/engine/core/: ecs_world.cpp  ecs_world.hpp  ecs_world_resource_ext.hpp  resource_database.cpp  resource_database.hpp
src/engine/input_system/: action_context.cpp  data.hpp  input_data.hpp  input_manager.cpp  input_system.hpp
(+541 files in other folders)
